# algokit-subscriber-py

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/actions/publish-docs/: action.yml
.github/actions/python-semantic-release/: action.yaml
.github/actions/setup-algokit-python/: action.yaml
.github/workflows/: build-python.yaml  cd.yaml  check-docs.yaml  check-python.yaml  gh-pages.yaml  pr.yaml  publish-devportal-docs.yml  verify-examples.yaml
docs/: .gitignore  README.md  api.md  api_build.py  astro.config.mjs  conf.py  index.md  package-lock.json  package.json  pnpm-lock.yaml  sidebar.config.json  subscriber.md  subscriptions.md  tsconfig.json
docs/scripts/: generate-examples-mdx.ts
docs/sphinx/: conf.py  index.rst
docs/src/: content.config.ts
docs/src/components/: DescriptionRenderer.astro
docs/src/content/docs/: index.mdx
docs/src/content/docs/concepts/: arc28-events.md  emit-arc28-events.md  fast-catchup.md  filtering.md  inner-transactions.md  low-latency.md  state-proofs.md  sync-behaviour.md  watermarking.md
docs/src/content/docs/guide/: subscriber.md  subscriptions.md
docs/src/content/docs/tutorials/: quick-start.md
docs/src/loaders/: examples-loader.ts
docs/src/pages/examples/: [...slug].astro  index.astro
examples/governance/: README.md  governance.py
examples/live_monitoring/: README.md  live_monitoring.py
examples/payments/: payments.py
examples/subscriber/: 01_basic_poll_once.py  02_continuous_subscriber.py  03_payment_filters.py  04_asset_transfer.py  05_app_call.py  06_multiple_filters.py  07_balance_changes.py  08_arc28_events.py  09_inner_transactions.py  10_batch_and_mappers.py  11_watermark_persistence.py  12_sync_behaviours.py  13_custom_filters.py  14_stateless_subscriptions.py  15_lifecycle_hooks.py  README.md  pyproject.toml  verify-all.sh
examples/subscriber/shared/: __init__.py  constants.py  utils.py
examples/subscriber/shared/artifacts/: testing-app.arc56.json
examples/transaction_recording/: .gitignore  README.md  transaction_recording.py
examples/usdc/: usdc.py
src/algokit_subscriber/: __init__.py  _block.py  _indexer_lookup.py  _internal_types.py  _subscriber.py  _subscription.py  _transform.py  _utils.py  _watermark.py  block.py  indexer_lookup.py  subscriber.py  subscription.py  transform.py  utils.py
src/algokit_subscriber/types/: arc28.py  block.py  event_emitter.py  indexer.py  subscription.py  transaction.py
src/algokit_subscriber_py/: __init__.py  block.py  indexer_lookup.py  subscriber.py  subscription.py  transform.py  utils.py
src/algokit_subscriber_py/types/: arc28.py  block.py  event_emitter.py  indexer.py  subscription.py  transaction.py
tests/: __init__.py  accounts.py  conftest.py  filter_fixture.py  test_algod_indexer_parity.py  test_balance_changes.py  test_catchup_with_indexer.py  test_complex_txns.py  test_events.py  test_fail.py  test_filters.py  test_heartbeat.py  test_multiple_filters.py  test_skip_sync_newest.py  test_subscriber.py  test_sync_oldest.py  test_sync_oldest_start_now.py  test_transform_appl.py  test_transform_keyreg.py  test_transform_pay.py  test_transform_stpf.py  transactions.py
tests/__snapshots__/test_complex_txns/: module.json
tests/__snapshots__/test_transform_keyreg/: module.json
tests/__snapshots__/test_transform_stpf/: module.json
tests/contracts/: TestingApp.arc32.json  testing_app_client.py
