[project]
name = "algokit-subscriber"
version = "2.0.0-alpha.5"
description = ""
authors = [{ name = "Algorand Foundation" }]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "algokit-utils>=5.0.0a18",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "ruff>=0.12.9",
    "pytest>=8.4.1",
    "pre-commit>=4.2.0",
    "pytest-cov>=6.2.1",
    "poethepoet>=0.36.0",
    "pytest-sugar>=1.0.0",
    "pip-audit>=2.9.0",
    "syrupy>=5.0.0",
    "python-semantic-release>=10.5.3",
]
docs = [
    "sphinx>=8.0.0,<9",
    "sphinx-autoapi>=3.4.0,<4",
    "sphinx-markdown-builder>=0.6.8,<0.7",
    "pydoclint>=0.6.0,<0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/algokit_subscriber"]

[tool.ruff]
line-length = 99
lint.select = [
    # all possible codes as of this ruff version are listed here,
    # ones we don't want/need are commented out to make it clear
    # which have been omitted on purpose vs which ones get added
    # in new ruff releases and should be considered for enabling
    "F",   # pyflakes
    "E",
    "W",   # pycodestyle
    "C90", # mccabe
    "I",   # isort
    "N",   # PEP8 naming
    "UP",  # pyupgrade
    "YTT", # flake8-2020
    "ANN", # flake8-annotations
    # "S",    # flake8-bandit
    # "BLE",  # flake8-blind-except
    "FBT", # flake8-boolean-trap
    "B",   # flake8-bugbear
    "A",   # flake8-builtins
    # "COM",  # flake8-commas
    "C4",  # flake8-comprehensions
    "DTZ", # flake8-datetimez
    "T10", # flake8-debugger
    # "DJ",   # flake8-django
    # "EM",   # flake8-errmsg
    # "EXE",  # flake8-executable
    "ISC", # flake8-implicit-str-concat
    "ICN", # flake8-import-conventions
    # "G",    # flake8-logging-format
    # "INP",  # flake8-no-pep420
    "PIE", # flake8-pie
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "RSE", # flake8-raise
    "RET", # flake8-return
    "SLF", # flake8-self
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "TCH", # flake8-type-checking
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "ERA", # eradicate
    # "PD",   # pandas-vet
    "PGH", # pygrep-hooks
    "PL",  # pylint
    # "TRY",  # tryceratops
    # "NPY",  # NumPy-specific rules
    "RUF", # Ruff-specific rules
]
lint.ignore = [
    "RET505", # allow else after return
    "SIM108", # allow if-else in place of ternary
    "E111",   # indentation is not a multiple of four
    "E117",   # over-indented
    "ISC001", # single line implicit string concatenation
    "ISC002", # multi line implicit string concatenation
    "Q000",   # bad quotes inline string
    "Q001",   # bad quotes multiline string
    "Q002",   # bad quotes docstring
    "Q003",   # avoidable escaped quotes
    "W191",   # indentation contains tabs
    "ERA001", # commented out code
]
# Exclude a variety of commonly ignored directories.
extend-exclude = ["docs", ".git", ".mypy_cache", ".ruff_cache"]
# Assume Python 3.12.
target-version = "py312"

[tool.ruff.lint.flake8-annotations]
allow-star-arg-any = true
suppress-none-returning = true

[tool.mypy]
files = ["src", "examples", "test"]
exclude = ["dist"]
python_version = "3.12"
warn_unused_ignores = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unreachable = true
warn_return_any = true
strict = true
disallow_untyped_decorators = true
disallow_any_generics = false
implicit_reexport = false
show_error_codes = true

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E501", "T201", "PLR2004", "F811"]
"examples/*" = ["T201", "N999", "PLR2004"]

[tool.poe.tasks]
docs-api         = "python docs/api_build.py"
docs-dev         = { shell = "python docs/api_build.py && pnpm --dir docs dev" }
docs-build       = { shell = "python docs/api_build.py && pnpm --dir docs build" }
docs-preview     = { shell = "pnpm --dir docs preview" }
docstrings-check = "pydoclint src --style sphinx --arg-type-hints-in-docstring false --check-return-types false"

[tool.poe.tasks.release-preview]
sequence = [
  { cmd = "uv run semantic-release version --print-last-released-tag" },
  { cmd = "uv run semantic-release version --print-tag --as-prerelease" },
]
help = "Preview current and next prerelease version"

[tool.poe.tasks.release-dry-run-alpha]
shell = "uv run semantic-release --noop -vv version --as-prerelease --prerelease-token alpha --print-tag"
help = "Dry-run alpha release (no changes made)"

[tool.poe.tasks.release-dry-run-beta]
shell = "uv run semantic-release --noop -vv version --as-prerelease --prerelease-token beta --print-tag"
help = "Dry-run beta release (no changes made)"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
build_command = "pip install build && python -m build"
commit_message = "{version}\n\n[skip ci] Automatically generated by python-semantic-release"
tag_format = "v{version}"
allow_zero_version = false

[tool.semantic_release.branches.main]
match = "main"
prerelease_token = "beta"
prerelease = false

[tool.semantic_release.branches.alpha]
match = "alpha"
prerelease_token = "alpha"
prerelease = true

[tool.semantic_release.commit_parser_options]
allowed_tags = [
    "build",
    "chore",
    "ci",
    "docs",
    "feat",
    "fix",
    "perf",
    "style",
    "refactor",
    "test",
]
minor_tags = ["feat"]
patch_tags = ["fix", "perf", "docs"]

[tool.semantic_release.publish]
dist_glob_patterns = [
    "dist/*",
    "stubs/dist/*",
] # order here is important to ensure compiler wheel is published first
upload_to_vcs_release = true

[tool.semantic_release.remote.token]
env = "GITHUB_TOKEN"
